--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -314,7 +314,6 @@ summary: "Crime against households and adults, also including data on crime expe
                           <div class="btn-group margin-bottom--2">
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
                             href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab">
-
                                   Image
                               </a>
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
@@ -398,15 +397,15 @@ summary: "Crime against households and adults, also including data on crime expe
                         <h5 class="margin-bottom--1">Download this chart</h5>
                           <div class="btn-group margin-bottom--2">
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a">
+                            href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a">
                                   Image
                               </a>
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a&format=csv">
+                            href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a&format=csv">
                                   .CSV
                               </a>
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a&format=xls">
+                            href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a&format=xls">
                                   .XLS
                               </a>
                           </div>
@@ -450,15 +449,15 @@ summary: "Crime against households and adults, also including data on crime expe
                         <h5 class="margin-bottom--1">Download this chart</h5>
                           <div class="btn-group margin-bottom--2">
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d">
+                            href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d">
                                   Image
                               </a>
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d&format=csv">
+                            href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d&format=csv">
                                   .CSV
                               </a>
                             <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls"
-                            href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d&format=xls">
+                            href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/ed20662d&format=xls">
                                   .XLS
                               </a>
                           </div>
@@ -523,15 +522,15 @@ summary: "Crime against households and adults, also including data on crime expe
           <h5 class="margin-bottom--1">Download this chart</h5>
             <div class="btn-group margin-bottom--2">
               <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
-              href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933">
+              href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933">
                     Image
                 </a>
               <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
-              href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933&format=csv">
+              href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933&format=csv">
                     .CSV
                 </a>
               <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls"
-              href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933&format=xls">
+              href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/f04e9933&format=xls">
                     .XLS
                 </a>
             </div>
@@ -581,15 +580,15 @@ summary: "Crime against households and adults, also including data on crime expe
                 <h5 class="margin-bottom--1">Download this chart</h5>
                   <div class="btn-group margin-bottom--2">
                     <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
-                    href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4">
+                    href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4">
                           Image
                       </a>
                     <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
-                    href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4&format=csv">
+                    href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4&format=csv">
                           .CSV
                       </a>
                     <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls"
-                    href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4&format=xls">
+                    href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4&format=xls">
                           .XLS
                       </a>
                   </div>
@@ -633,15 +632,15 @@ summary: "Crime against households and adults, also including data on crime expe
                       <h5 class="margin-bottom--1">Download this chart</h5>
                         <div class="btn-group margin-bottom--2">
                           <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
-                          href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822">
+                          href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822">
                                 Image
                             </a>
                           <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
-                          href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822&format=csv">
+                          href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822&format=csv">
                                 .CSV
                             </a>
                           <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls"
-                          href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822&format=xls">
+                          href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822&format=xls">
                                 .XLS
                             </a>
                         </div>
@@ -684,15 +683,15 @@ summary: "Crime against households and adults, also including data on crime expe
                     <h5 class="margin-bottom--1">Download this chart</h5>
                       <div class="btn-group margin-bottom--2">
                         <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png"
-                        href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89">
+                        href="https://www.ons.gov.uk/chartimage?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89">
                               Image
                           </a>
                         <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv"
-                        href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89&format=csv">
+                        href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89&format=csv">
                               .CSV
                           </a>
                         <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls"
-                        href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89&format=xls">
+                        href="https://www.ons.gov.uk/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/d193ce89&format=xls">
                               .XLS
                           </a>
                       </div>
