--- a/content-design/Crime/October2019/index.html
+++ b/content-design/Crime/October2019/index.html
@@ -301,12 +301,9 @@ summary: "Crime against households and adults, also including data on crime expe
                     <!-- Chart -->
                       <h4>Figure 1: Following long-term falls since the mid 1990s, crime estimated by the survey has not changed significantly over the last year</h4>
                       <h5 class="chart-subtitle">England and Wales, year ending December 1981 to year ending June 2019</h5>
-                        <div id="headingChart"></div>
-                          <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
-                          <script>
-                            var pymParent = new pym.Parent('headingChart', "https://www.ons.gov.uk//embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/fec710ab", {});
-                            </script>
+                      <img style="width:100%" src="{{ "assets/img/Fig 1.png" | relative_url }}" class="margin-bottom--3" alt="">
                         <p class="font-xsmall">Source: Office for National Statistics - Crime Survey for England and Wales</p>
+
 
                         <!-- Buttons -->
 
@@ -385,11 +382,7 @@ summary: "Crime against households and adults, also including data on crime expe
                     <!-- Chart -->
                       <h4>Figure 2: Crime Survey for England and Wales shows long-term reductions in violent crime but little change in recent years </h4>
                       <h5 class="chart-subtitle">England and Wales, year ending December 1981 to year ending June 2019</h5>
-                        <div id="headingChart2"></div>
-                          <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
-                          <script>
-                            var pymParent = new pym.Parent('headingChart2', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/e208255a", {});
-                            </script>
+                      <img style="width:100%" src="{{ "assets/img/Fig 7.png" | relative_url }}" class="margin-bottom--3" alt="">
                         <p class="font-xsmall">Source: Office for National Statistics - Crime Survey for England and Wales</p>
 
                         <!-- Buttons -->
@@ -568,11 +561,7 @@ summary: "Crime against households and adults, also including data on crime expe
             <!-- Chart -->
               <h4>  Figure 5: Homicides have decreased following increases over the last four years</h4>
               <h5 class="chart-subtitle">England and Wales, year ending March 2003 to year ending June 2019</h5>
-                <div id="headingChart5"></div>
-                  <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
-                  <script>
-                    var pymParent = new pym.Parent('headingChart5', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/1b6606e4", {});
-                    </script>
+              <img style="width:100%" src="{{ "assets/img/Fig 4.png" | relative_url }}" class="margin-bottom--3" alt="">
                 <p class="font-xsmall">Source: Home Office – Police recorded crime</p>
 
                 <!-- Buttons -->
@@ -620,11 +609,7 @@ summary: "Crime against households and adults, also including data on crime expe
                   <!-- Chart -->
                     <h4>Figure 6: The CSEW indicates emerging rise in overall theft offences following long-term declines</h4>
                     <h5 class="chart-subtitle">England and Wales, year ending December 1981 to June 2019</h5>
-                      <div id="headingChart6"></div>
-                        <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
-                        <script>
-                          var pymParent = new pym.Parent('headingChart6', "https://www.ons.gov.uk/embed?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingjune2019/5055d822", {});
-                          </script>
+                    <img style="width:100%" src="{{ "assets/img/Fig 7.png" | relative_url }}" class="margin-bottom--3" alt="">
                       <p class="font-xsmall">Source: Office for National Statistics – Crime Survey for England and Wales</p>
 
                       <!-- Buttons -->
